2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/actions/tool-options-commands.c
	(tool_options_save_new_cmd_callback): pass the toplevel widget as
	parent to gimp_query_string_box().

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/core/gimptoolpresets.c: do not create empty presets files.

2006-12-10  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimptoolpresets.[ch]: added GimpToolPresets, derived
	from GimpList.

	* app/core/gimptoolinfo.[ch]: use the new type, renamed
	member "options_presets" to "presets".

	* app/actions/tool-options-actions.c
	* app/actions/tool-options-commands.c
	* app/core/gimptooloptions.[ch]
	* app/menus/tool-options-menu.c
	* app/widgets/gimptooloptionseditor.c: changed accordingly.

	* app/tools/gimp-tools.c: let the GimpToolPresets object deal with
	loading and saving the presets from ${gimpdir}/tool-options.

	* app/core/gimpcontainer-filter.c
	* app/core/gimpdocumentlist.c
	* app/core/gimplist.c
	* app/text/gimpfontlist.c: use canonical property names.

2006-12-10  Sven Neumann  <sven@gimp.org>

	* modules/controller_midi.c (midi_set_device): use
	g_get_application_name() for the client name; made the name of the
	ALSA port translatable.

2006-12-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorselectorpalette.[ch]
	* app/widgets/gimpcontrollerinfo.[ch]
	* app/widgets/gimpcontrollerkeyboard.[ch]
	* app/widgets/gimpcontrollerwheel.[ch]: forgot LIBGIMP -> GIMP

2006-12-10  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpbrushcore.c: also scale the brush's spacing (by
	scaling its x_axis and y_axis). Addresses bug #65030.

2006-12-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushpipe.h: fix whitespace.

2006-12-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: Removed duplicate
	variable declaration from let block.

2006-12-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/CEL.c
	* plug-ins/common/CML_explorer.c